	 
* 1.1.1 (August 21 2007) 
	* New menu action for opening the currently opened file counterpart (interface/implementation)
	* Support for camlp4 preprocessing 	
	
* 1.2.0
	* Code formatter rewrite : better formatting and more parameters
	* Replaced build "N°" by corresponding Unicode character (as suggested by Ben Liblit)
	* Removed unnecessary protection tokenization of ocamlbuild paths, which caused problems
	* Use parsed ml files in completion when there is no corresponding mli file
	* Removed the underscore from colorized punctuation characters
	* User setting for disabling automatic completion
	* Changed a regular expression which was causing stack overflows on big inputs
	* Interface files are now parsed with a real parser, instead of the old fuzzy one
	* In the toplevel, Ctrl+Enter always evaluates the expression, even when it is not terminated with ";;". This is useful to answer input queries, or when using a different syntax (revised syntax uses a single ";" for example).
	* Changed the terminal type for toplevel, so that it doesn't try to send formatting characters  
	* The debugger is now passed the paths defined for the project 
	* Commenting and uncommenting of code blocks in the editor (protected and not protected)
	* Integrated a patch for OMake support contributed by Dmitry Bely
	* Replaced Unix newlines by platform newlines
	* Optimized an often used function
	* Added 'insert spaces instead of tabulations' option for the O'Caml editor
	* Spell checking of comments and documentation comments
	* Keep leading and trailing newlines as-is when formatting a selection
	* Hyperlink on open directive opens a ".ml" file when there is no ".mli" file
	* Add referenced projects paths to available paths
	* Option to override ocamlbuild tools paths
	* When a folder is added or removed in an ocaml project, this project paths are automatically changed accordingly 
	
	
	
	
	